$Id: History,v 1.4 1999-02-06 13:15:44 stesting Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

February 6th 1999  John Allison
- Commented out troublesome printing:
  - tracking/verbose in various places.
  - run/verbose in some .in files to suppress timing information which
    spoils the diff.

tests-01-00-02  January 28th 1999  John Allison
- Removed `exit' from setup.sh.
- Updated some .in files to reduce output.
- Updated .out files to SUN debug except 05 and 07.

tests-01-00-01  January 20th 1999  John Allison
- First attempt at reworked scripts for new stt structure.

September 10th, 1998 - Gabriele Cosmo
- Added statements to each main() function to define RanecuEngine as
  the default engine.
- Updated the following reference-output files accordingly (run on SUN-AFS):
  test01.geom1.out, test02.EM.out, test02.hadron.out, test03.out, test05.out
  testT07.out.

August 26th, 1998 - John Allison (tests-00-02-01)
- Backed out G4UIGAG as default - G4UIterminal is now default.

14th August 1998  John Allison
- Added checkout.sh and 2 .sdb files.

July 20th 1998 - G.Cosmo (tests-00-01-07)
- Many updates since last _not_ announced tags on test01,02,04,05 and
  new reference output files.
